add relative links to index, titles and imgs to recipes pages

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/red-curry-chicken.html">Five-Ingredient Red Curry Chicken</a>
+    <a href="./recipes/salmon-cake.html">Grandma's Famous Salmon Cakes</a>
+    <a href="./recipes/macaroni-and-cheese.html">Simple Macaroni and Cheese</a>
 </body>
 </html>
