--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/red-curry-chicken.html">Five-Ingredient Red Curry Chicken</a>
-    <a href="./recipes/salmon-cake.html">Grandma's Famous Salmon Cakes</a>
-    <a href="./recipes/macaroni-and-cheese.html">Simple Macaroni and Cheese</a>
+    <ul>
+        <li><a href="./recipes/red-curry-chicken.html">Five-Ingredient Red Curry Chicken</a></li>
+        <li></li><a href="./recipes/salmon-cake.html">Grandma's Famous Salmon Cakes</a></li>
+        <li></li><a href="./recipes/macaroni-and-cheese.html">Simple Macaroni and Cheese</a></li>
+    </ul>
 </body>
 </html>
