change img size to 400px width

--- a/recipes/red-curry-chicken.html
+++ b/recipes/red-curry-chicken.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Five-Ingredient Red Curry Chicken</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F3949345.jpg&w=958&h=958&c=sc&poi=face&q=85 alt="A Curry Chicken Dish">
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F3949345.jpg&w=958&h=958&c=sc&poi=face&q=85 alt="A Curry Chicken Dish" width="400">
     <p>
         Five-ingredient red curry chicken with noodles is easy, quick, and inexpensive to make. Sweetened with coconut milk for unbelievable flavor! Top with chopped cilantro, green onions, and red chile peppers if desired.   
     </p>
