--- a/recipes/macaroni-and-cheese.html
+++ b/recipes/macaroni-and-cheese.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Simple Macaroni and Cheese</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2021%2F11%2F17%2F238691-simple-mac-and-cheese-DivergentB-2x1-1.jpg" alt="a macaroni and cheese dish">
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2021%2F11%2F17%2F238691-simple-mac-and-cheese-DivergentB-2x1-1.jpg" alt="a macaroni and cheese dish" width="400">
     <p>
         A very quick and easy fix to a tasty side-dish. Fancy, designer mac and cheese often costs forty or fifty dollars to prepare when you have so many exotic and expensive cheeses, but they aren't always the best tasting. This recipe is cheap and tasty.
     </p>
