create styles.css file

--- a/recipes/salmon-cake.html
+++ b/recipes/salmon-cake.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Grandma's Famous Salmon Cakes</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F785713.jpg&w=596&h=596&c=sc&poi=face&q=85" alt="a salmon cacke dish" width="400">
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F785713.jpg&w=596&h=596&c=sc&poi=face&q=85" alt="a salmon cacke dish">
     <p>
         This is a recipe for my Grandmother's famous salmon cakes. It is a family recipe that has been passed down through generations. Serve with macaroni and cheese or any other type of side dish. 
     </p>
