--- a/recipes/red-curry-chicken.html
+++ b/recipes/red-curry-chicken.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Five-Ingredient Red Curry Chicken</title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 <body>
     <h1>Five-Ingredient Red Curry Chicken</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F3949345.jpg&w=958&h=958&c=sc&poi=face&q=85 alt="A Curry Chicken Dish" width="400">
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F3949345.jpg&w=958&h=958&c=sc&poi=face&q=85" alt="A Curry Chicken Dish">
     <p>
         Five-ingredient red curry chicken with noodles is easy, quick, and inexpensive to make. Sweetened with coconut milk for unbelievable flavor! Top with chopped cilantro, green onions, and red chile peppers if desired.   
     </p>
