Add styles to index.html and each recipe's text and imgs
Correct link’s href property on all three recipes

Add the “img” class to all images to properly change all image’s sizes

Add font-family, font-size, font-weight, color and alignment attributes

Add breaks between links

--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
+    <h1 id="main-title">Odin Recipes</h1>
+    <ul id="links">
         <li><a href="./recipes/red-curry-chicken.html">Five-Ingredient Red Curry Chicken</a></li>
-        <li></li><a href="./recipes/salmon-cake.html">Grandma's Famous Salmon Cakes</a></li>
-        <li></li><a href="./recipes/macaroni-and-cheese.html">Simple Macaroni and Cheese</a></li>
+        <br>
+        <li><a href="./recipes/salmon-cake.html">Grandma's Famous Salmon Cakes</a></li>
+        <br>
+        <li><a href="./recipes/macaroni-and-cheese.html">Simple Macaroni and Cheese</a></li>
+        <br>
     </ul>
 </body>
 </html>
