--- a/recipes/red-curry-chicken.html
+++ b/recipes/red-curry-chicken.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Five-Ingredient Red Curry Chicken</title>
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" type="text/css" href="../styles.css" />
 </head>
 <body>
-    <h1>Five-Ingredient Red Curry Chicken</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F3949345.jpg&w=958&h=958&c=sc&poi=face&q=85" alt="A Curry Chicken Dish">
+    <h1 class="chicken">Five-Ingredient Red Curry Chicken</h1>
+    <img class="img" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F3949345.jpg&w=958&h=958&c=sc&poi=face&q=85" alt="A Curry Chicken Dish">
     <p>
         Five-ingredient red curry chicken with noodles is easy, quick, and inexpensive to make. Sweetened with coconut milk for unbelievable flavor! Top with chopped cilantro, green onions, and red chile peppers if desired.   
     </p>
 
-    <h2>Ingredients</h2>
+    <h2 class="chicken">Ingredients</h2>
     <ul>
         <li>2 tablespoons coconut oil</li>
         <li>(16 ounce) package skinless, boneless chicken breast halves, cut into small cubes</li>
@@ -23,7 +23,7 @@
         <li>½ (16 ounce) package dried rice stick vermicelli noodles </li>
     </ul>
 
-    <h2>Steps</h2>
+    <h2 class="chicken">Steps</h2>
     <ol>
         <li>Heat oil in a large skillet on high heat. Add chicken cubes; cook until browned, about 2 minutes per side. Reduce heat to medium-high and add coconut cream and curry sauce. Cook until chicken is no longer pink in the center and the juices run clear, about 5 minutes. An instant-read thermometer inserted into the center should read at least 165 degrees F (74 degrees C).</li>
         <li>Fill a large pot with lightly salted water and bring to a rolling boil; stir in vermicelli pasta and return to a boil. Cook pasta uncovered, stirring occasionally, until the pasta is tender yet firm to the bite, 4 to 5 minutes. Drain.</li>   
