--- a/recipes/salmon-cake.html
+++ b/recipes/salmon-cake.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grandma's Famous Salmon Cakes</title>
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" type="text/css" href="../styles.css" />
 </head>
 <body>
-    <h1>Grandma's Famous Salmon Cakes</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F785713.jpg&w=596&h=596&c=sc&poi=face&q=85" alt="a salmon cacke dish">
+    <h1 class="salmon">Grandma's Famous Salmon Cakes</h1>
+    <img class="img" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F785713.jpg&w=596&h=596&c=sc&poi=face&q=85" alt="a salmon cacke dish">
     <p>
         This is a recipe for my Grandmother's famous salmon cakes. It is a family recipe that has been passed down through generations. Serve with macaroni and cheese or any other type of side dish. 
     </p>
 
-    <h2>Ingredients</h2>
+    <h2 class="salmon">Ingredients</h2>
     <ul>
         <li>1 (14.75 ounce) can salmon, drained and flaked</li>
         <li>2 eggs, beaten</li>
@@ -23,7 +23,7 @@
         <li>3 tablespoons vegetable oil </li>
     </ul>
 
-    <h2>Steps</h2>
+    <h2 class="salmon">Steps</h2>
     <ol>
         <li>Pick through the salmon and remove any bones. In a mixing bowl, beat the eggs and add the diced onion, salmon and pepper. Mix thoroughly.</li>
         <li>Shape into 2 ounce patties; about 7 or 8 patties. In a large skillet over medium heat, heat the oil. Fry each patty for 5 minutes on each side or until crispy and golden brown.</li>
